[package]
name = "tinylang"
version = "0.3.0"
edition = "2021"
license = "MIT"
homepage = "https://tinylang.elias.tools/"
description = "TinyLang is a template language build as a simple tree-walk interpreter using PEST."

[features]
webassembly = ["dep:wasm-bindgen", "dep:gloo-utils"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.21.1"
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
# wasm dependencies
wasm-bindgen = {version = "0.2.100", optional = true }
gloo-utils = { version = "0.2.0", optional = true}

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "basic"
harness = false
