[package]
name = "tinylang"
version = "0.3.2"
edition = "2021"
license = "MIT"
homepage = "https://tinylang.elias.tools/"
description = "TinyLang is a template language build as a simple tree-walk interpreter using PEST."

[features]
webassembly = ["dep:wasm-bindgen", "dep:gloo-utils"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.8"
pest_derive = "2.8"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
# wasm dependencies
wasm-bindgen = {version = "0.2.101", optional = true }
gloo-utils = { version = "0.2.0", optional = true}

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "basic"
harness = false
