[package]
name = "tinylang"
version = "0.3.3"
edition = "2021"
license = "MIT"
homepage = "https://tinylang.elias.tools/"
description = "TinyLang is a template language build as a simple tree-walk interpreter using PEST."

[features]
webassembly = ["dep:wasm-bindgen", "dep:gloo-utils"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.8"
pest_derive = "2.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
thiserror = "2.0.17"
# wasm dependencies
wasm-bindgen = {version = "0.2.106", optional = true }
gloo-utils = { version = "0.2.0", optional = true}

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "basic"
harness = false
